<resources>
    <string name="app_name">MyShape</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">My Shape</string>
    <string name="graph_button">Graphs</string>
    <string name="calculator">Calculators</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="calcbmi">Calculate BMI</string>
    <string name="dateErrorMessage">Please Enter a valid date</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_these_details">Please Enter these Details</string>
    <string name="title_activity_first_time_user">FirstTimeUser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="userNumber">userNumber</string>
    <string name="ageErrorMessage">Please enter your age</string>
    <string name="heightErrorMessage">Please enter your Height in centimetres</string>
    <string name="weightErrorMessage">Please enter your Weight in Kilograms</string>
    <string name="measurementsAdded">Measurements successfully added</string>
    <string name="many_glasses">How many glasses of water have you drank today?</string>
    <string name="title_activity_graph">graphActivity</string>
    <string name="dates_help">Please Enter Dates as requested</string>
</resources>

